<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="Profile" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="Events" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Settings" />
    </group>

    <item android:title="@string/drawer_section_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/drawer_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/drawer_about" />
        </menu>
    </item>

</menu>
