<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1">

    <com.jaysyko.wrestlechat.customImageView.RoundedImageView
        android:id="@+id/ivProfileLeft"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:contentDescription="@string/description_other_profile_image"
        android:src="@drawable/ic_launcher" />

    <RelativeLayout
        android:id="@+id/sender_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/sender_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ellipsize="marquee"
            android:gravity="start"
            android:lines="1"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:singleLine="false"
            android:text="@string/lorem_username"
            android:textSize="12sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/my_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.00"
        android:background="@android:color/transparent">

    </RelativeLayout>

    <com.jaysyko.wrestlechat.customImageView.RoundedImageView
        android:id="@+id/ivProfileRight"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:contentDescription="@string/description_my_profile_image"
        android:src="@drawable/ic_launcher" />

</LinearLayout>